--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
           <button id="send-btn">➤</button>
         </div>
       </div>
+      <script src="script.js"></script>
 </body>
 </html>
